src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Card_Returned_to_Marqeta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Card Returned to Marqeta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <label>Case Reason2</label>
        <picklist>
            <controllingField>Type_a__c</controllingField>
            <picklistValues>
                <fullName>Activate by Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Reload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonus/Incentive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Decline - Card not activated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Decline - Insufficient Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Decline - MID change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Decline - No offer taken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not recall registering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not receive Card in mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Cleaners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expiration Dates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forgot Password</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Spend Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gifting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grocery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Load Offers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misunderstood the Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not relevent to me</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Marqeta Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print Collateral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jamba Juice STS Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Feature_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feature Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <picklist>
            <picklistValues>
                <fullName>Sip to Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UFPC/Yum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shop n Give</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_a__c</fullName>
        <label>Type2</label>
        <picklist>
            <picklistValues>
                <fullName>Account Closure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost / Stolen Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant Recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My Account / Login</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POS / Redemption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refer - a - friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zoho_Request_ID__c</fullName>
        <label>Zoho Request ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Customer_Support</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Customer Support</value>
        </filters>
        <label>Customer Support</label>
    </listViews>
    <listViews>
        <fullName>Customer_Support_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Customer Support</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Customer Support Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Escalated_to_Jira</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Technology</value>
        </filters>
        <label>Escalated to Jira</label>
    </listViews>
    <listViews>
        <fullName>Escalated_to_Jira_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Program__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Technology</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Escalated to Jira Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Jamba_Juice_STS</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Jamba Juice STS Program</value>
        </filters>
        <label>Jamba Juice STS</label>
    </listViews>
    <listViews>
        <fullName>Jamba_Juice_STS_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Jamba Juice STS Program</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Jamba Juice STS Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Marketing</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Marketing</value>
        </filters>
        <label>Marketing</label>
    </listViews>
    <listViews>
        <fullName>Marketing_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Marketing</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Marketing Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
</CustomObject>